# poly1305

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs  poly1305-check.rs
