[package]
name = "poly1305"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.5"
num-bigint = "0.4.4"

# [[bin]]
# name = "poly1305-gen"
# path = "src/poly1305-gen.rs"

# [[bin]]
# name = "poly1305-check"
# path = "src/poly1305-check.rs"